--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,30 @@
 
 /* Your CSS Code here. */
+body{
+	margin:0;
+	padding:0;
+	
+}
+.parent{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly ;
+	margin:0;
+	padding:0;
+/* 	padding: 10px; */
+/* 	background: yellow;
+	 */
+}
+.child1{
+	background-color: red;
+	padding: 50px;
+}
+.child2{
+	background-color: blue;
+	padding:50px;
+}
+.child3{
+	background-color: green;
+	padding: 50px;
+	
+}
