--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,9 @@ body{
 .parent{
 	display: flex;
 	flex-direction: row;
-	justify-content: space-evenly ;
-	margin:0;
-	padding:0;
+	justify-content: space-between ;
+	flex-wrap: wrap;
+	
 /* 	padding: 10px; */
 /* 	background: yellow;
 	 */
